@@ -1,12 +1,7 @@
 {
-  "count": 33,
+  "count": 32,
   "uniques": 6,
   "clones": [
-    {
-      "timestamp": "2022-10-21T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-10-22T00:00:00Z",
       "count": 5,
